<resources>
    <!--App name-->
    <string name="app_name">The Solar System</string>

    <!--Menu item names-->
    <string name="action_settings">Settings</string>

    <!--Drawer accessibility strings-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Activity labels-->
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="button_submit">Submit</string>
    <string name="results_text">Results</string>
    <string name="btn_retry">Retry</string>

    <!--Quiz feedback-->
    <string name="great">Great Job! Keep it up!</string>
    <string name="good">Good Job! Try to get all 3 correct next time.</string>
    <string name="ok">You can do better!</string>
    <string name="bad">Study hard and try again :)</string>
    <string name="headingImages">Image Gallery</string>

    <!--About activity strings-->
    <string name="title_activity_image">ImageActivity</string>
    <string name="dev_name">Developer: Hammad Khalid</string>
    <string name="dev_email">h-hk@live.com</string>
    <string name="about_desc">The content of this app has been made possible by NASA. \n\nFor detailed information on the topics covered in this app, visit</string>
    <string name="about_desc_link">www.nasa.gov</string>
    <string name="about_rating">If you enjoyed using this app, please</string>
    <string name="dev_email_heading">Developer E-mail:</string>
    <string name="app_version">1.2</string>
    <string name="app_version_text">Version:</string>
    <string name="about">About</string>
</resources>
