<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/x_margin"
        android:paddingLeft="@dimen/x_margin"
        android:paddingRight="@dimen/x_margin"
        android:paddingBottom="@dimen/x_margin"
        tools:context="com.hammad.solarsystem.app.AboutActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@string/app_version" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:src="@drawable/ic_launcher_about" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x_margin"
            android:text="@string/dev_name"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev_email_heading"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:autoLink="email"
                android:linksClickable="true"
                android:text="@string/dev_email"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColorLink="@android:color/holo_blue_light" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="center"
            android:text="@string/about_desc"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:autoLink="web"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/about_desc_link"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColorLink="@android:color/holo_blue_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="center"
            android:text="@string/about_rating"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/tv_ratingLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/holo_blue_light" />

    </LinearLayout>
</ScrollView>
